2002-12-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* main.c (DefaultAlarm): fix initialize value

2002-12-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03578] meta refresh
	* file.c (getMetaRefreshParam): do nothing if refresh_interval < 0
		(HTMLtagproc1): rewrite refresh
		(HTMLlineproc2body): add HTML_META
	* fm.h (BP_RELOAD): deleted
		(Buffer): add event
		(AL_IMPLICIT_DONE): deleted
		(AL_ONCE): deleted
		(AL_RESTORE): deleted
		(AlarmEvent): added
	* main.c (AlarmEvent): deleted
		(PrevAlarm): deleted
		(DefaultAlarm): added
		(CurrentAlarm): point to DefaultAlarm
		(main): CurrentKeyData, CurrentCmdData
			handle Currentbuf->event
		(SigAlarm): CurrentAlarm is pointer
		(copyAlarmEvent): deleted
		(setAlarm): setAlarmEvent pass &DefaultAlarm
		(setAlarmEvent): arg event
		(ldDL): no BP_RELOAD
	* proto.h (setAlarmEvent): arg event

2002-12-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03577] incorrect table width
	* table.c (dv2sv): fix move direction
		(set_integered_width): ditto
		(check_table_height): ditto
		(feed_table_tag): ditto

2002-12-17  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03576] Re: news support
	* anchor.c (_put_anchor_news): convert to document code and quote
		(_put_anchor_all): convert to document code
	* main.c (chkNMIDBuffer): change url_like_pat

2002-12-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: rc: preserve_timestamp

2002-12-15  Takahashi Youichirou <nikuq@hk.airnet.ne.jp>

	* [w3m-dev 03574] Re: preserve timestamp
	* ftp.c (getFtpModtime): don't call localtime,gettime in same expr

2002-12-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03573] Re: Bug#172851: w3m: In form, takes hostname as baseref for relative URI action
	* url.c (parseURL): if empty is URL, base URL is used

2002-12-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03571] base=0 -> 10 in toNumber()
	* parsetagx.c (toNumber): strtol base=10
